# space

./: .auto-claude-status  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.auto-claude/specs/008-split-monolithic-dashboard-page-into-modular-compo/: MANUAL_VERIFICATION_GUIDE.md  build-progress.txt  spec.md
config/: accounts.txt.example
docker/: Dockerfile  docker-compose.yml
saas_finder/: __init__.py  __main__.py  api.py  celery_app.py  cli.py  config.py  finder.py  tasks.py
saas_finder/extractors/: __init__.py  revenue.py  urls.py
saas_finder/parsers/: __init__.py  mrr.py  url.py
saas_finder/scoring/: __init__.py  scorer.py
saas_finder/storage/: __init__.py  database.py  models.py
saas_finder/twitter/: __init__.py  client.py  models.py  nitter_scraper.py
saas_finder/twitter/scrapers/: __init__.py  apify_client.py  base.py  scraper_manager.py  scweet_client.py  twscrape_client.py
scripts/: analyze_tweets.py  migrate_to_postgres.py  monitor_apify.py  seed_data.py
tests/: test_parsers.py  test_scoring.py
web/: Dockerfile  package-lock.json  package.json
web/.auto-claude/specs/008-split-monolithic-dashboard-page-into-modular-compo/: build-verification-report.md
web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/src/components/dashboard/: IdeaRow.tsx  ScoreBreakdownPanel.tsx  index.ts
web/src/components/ui/: ScoreRing.tsx  StatCard.tsx  TrafficBar.tsx  TrafficLegend.tsx  index.ts
web/src/lib/: api.ts  utils.ts
web/src/types/: dashboard.ts  index.ts
