[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-finder"
version = "1.0.0"
description = "Twitter SaaS Idea Finder - Discover validated SaaS ideas from Twitter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SaaS Finder"}
]
keywords = ["saas", "twitter", "indiehackers", "buildinpublic", "mrr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tweepy>=4.14.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
saas-finder = "saas_finder.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/saas-finder"
Documentation = "https://github.com/yourusername/saas-finder#readme"
Repository = "https://github.com/yourusername/saas-finder"

[tool.setuptools.packages.find]
where = ["."]
include = ["saas_finder*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
